--- a/VoipApp/Layout/Base.lproj/Main.storyboard
+++ b/VoipApp/Layout/Base.lproj/Main.storyboard
@@ -21,6 +21,74 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eVg-q8-Vet">
                                 <rect key="frame" x="0.0" y="140" width="414" height="722"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="VoipContactCell" rowHeight="124" id="zUb-xc-gQq" customClass="VoipContactCell" customModule="VoipApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="124"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zUb-xc-gQq" id="7Kf-jf-Ldb">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="123.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="81u-4v-3vs">
+                                                    <rect key="frame" x="12" y="42" width="40" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="40" id="eum-f7-l7X"/>
+                                                        <constraint firstAttribute="height" constant="40" id="iPd-Fk-3KY"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4w3-x6-0ck">
+                                                    <rect key="frame" x="322" y="51.5" width="80" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="80" id="gzi-81-xw5"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Haf-sk-TO4">
+                                                    <rect key="frame" x="67" y="41.5" width="239" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nMi-gl-2N6">
+                                                    <rect key="frame" x="68" y="61.5" width="238" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0kq-Ax-4LM">
+                                                    <rect key="frame" x="0.0" y="122.5" width="414" height="1"/>
+                                                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="gP3-ZZ-h1t"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="0kq-Ax-4LM" secondAttribute="bottom" id="2zd-xC-jiq"/>
+                                                <constraint firstItem="81u-4v-3vs" firstAttribute="leading" secondItem="7Kf-jf-Ldb" secondAttribute="leading" constant="12" id="7Z9-5f-W34"/>
+                                                <constraint firstItem="4w3-x6-0ck" firstAttribute="leading" secondItem="nMi-gl-2N6" secondAttribute="trailing" constant="16" id="7rw-Wk-OX2"/>
+                                                <constraint firstAttribute="trailing" secondItem="0kq-Ax-4LM" secondAttribute="trailing" id="I4g-yM-CGa"/>
+                                                <constraint firstItem="nMi-gl-2N6" firstAttribute="centerY" secondItem="7Kf-jf-Ldb" secondAttribute="centerY" constant="10" id="KTQ-hg-eNO"/>
+                                                <constraint firstItem="Haf-sk-TO4" firstAttribute="leading" secondItem="81u-4v-3vs" secondAttribute="trailing" constant="15" id="QPc-ML-A74"/>
+                                                <constraint firstItem="nMi-gl-2N6" firstAttribute="leading" secondItem="81u-4v-3vs" secondAttribute="trailing" constant="16" id="S8d-Og-0DL"/>
+                                                <constraint firstAttribute="trailing" secondItem="4w3-x6-0ck" secondAttribute="trailing" constant="12" id="UFd-8p-EM0"/>
+                                                <constraint firstItem="0kq-Ax-4LM" firstAttribute="leading" secondItem="7Kf-jf-Ldb" secondAttribute="leading" id="WAg-Kw-Ywf"/>
+                                                <constraint firstItem="Haf-sk-TO4" firstAttribute="centerY" secondItem="7Kf-jf-Ldb" secondAttribute="centerY" constant="-10" id="cAS-bv-0CH"/>
+                                                <constraint firstItem="4w3-x6-0ck" firstAttribute="leading" secondItem="Haf-sk-TO4" secondAttribute="trailing" constant="16" id="lov-3j-sdu"/>
+                                                <constraint firstItem="4w3-x6-0ck" firstAttribute="centerY" secondItem="7Kf-jf-Ldb" secondAttribute="centerY" id="vwM-Uh-ng8"/>
+                                                <constraint firstItem="81u-4v-3vs" firstAttribute="centerY" secondItem="7Kf-jf-Ldb" secondAttribute="centerY" id="wBR-TR-rwU"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dateLabel" destination="4w3-x6-0ck" id="ZOY-Si-KDQ"/>
+                                            <outlet property="nameLabel" destination="Haf-sk-TO4" id="Zkf-1j-CT7"/>
+                                            <outlet property="thumbnail" destination="81u-4v-3vs" id="c80-dN-Vze"/>
+                                            <outlet property="typeLabel" destination="nMi-gl-2N6" id="eu1-6d-cVc"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
