--- a/VoipApp/Layout/Base.lproj/Main.storyboard
+++ b/VoipApp/Layout/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Call History View Controller-->
         <scene sceneID="fhr-kf-Q37">
             <objects>
-                <viewController storyboardIdentifier="history-call-view-controller" id="sBj-Nk-hxo" customClass="CallHistoryViewController" customModule="VoipApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="call-history-view-controller" id="sBj-Nk-hxo" customClass="CallHistoryViewController" customModule="VoipApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sC7-aD-jRA">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -115,9 +115,34 @@
                     <view key="view" contentMode="scaleToFill" id="J35-GE-dak">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zrf-MB-vlm">
+                                <rect key="frame" x="0.0" y="33" width="414" height="818"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="T9m-cK-iJV">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="T9m-cK-iJV" id="Eja-w6-Qai">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="z0l-4l-b1M" firstAttribute="bottom" secondItem="zrf-MB-vlm" secondAttribute="bottom" id="2vJ-F3-wtE"/>
+                            <constraint firstItem="zrf-MB-vlm" firstAttribute="leading" secondItem="z0l-4l-b1M" secondAttribute="leading" id="3iG-xC-YuR"/>
+                            <constraint firstItem="z0l-4l-b1M" firstAttribute="trailing" secondItem="zrf-MB-vlm" secondAttribute="trailing" id="4j9-PY-ip3"/>
+                            <constraint firstItem="zrf-MB-vlm" firstAttribute="top" secondItem="z0l-4l-b1M" secondAttribute="top" id="dee-FN-lTX"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="z0l-4l-b1M"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="zrf-MB-vlm" id="a3R-e0-ytH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IfQ-zD-sgW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
