--- a/VoipApp/Layout/Base.lproj/Main.storyboard
+++ b/VoipApp/Layout/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="VoipContactCell" rowHeight="124" id="zUb-xc-gQq" customClass="VoipContactCell" customModule="VoipApp" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="VoipCallCell" rowHeight="124" id="zUb-xc-gQq" userLabel="VoipCallCell" customClass="VoipCallCell" customModule="VoipApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="124"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zUb-xc-gQq" id="7Kf-jf-Ldb">
@@ -116,17 +116,55 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zrf-MB-vlm">
-                                <rect key="frame" x="0.0" y="33" width="414" height="818"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zrf-MB-vlm">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="T9m-cK-iJV">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="VoipContactCell" rowHeight="139" id="r4X-tT-O1B" userLabel="VoipContactCell" customClass="VoipContactCell" customModule="VoipApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="139"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="T9m-cK-iJV" id="Eja-w6-Qai">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="r4X-tT-O1B" id="Ujr-SE-ev0">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="138.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vvv-uK-Rfq">
+                                                    <rect key="frame" x="282" y="59" width="120" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="120" id="SLG-Yc-TXT"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="700" verticalHuggingPriority="251" horizontalCompressionResistancePriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cwj-Pq-vxT">
+                                                    <rect key="frame" x="32" y="69" width="234" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="700" verticalHuggingPriority="251" horizontalCompressionResistancePriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LsP-QO-cvR">
+                                                    <rect key="frame" x="32" y="49" width="234" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Cwj-Pq-vxT" firstAttribute="leading" secondItem="Ujr-SE-ev0" secondAttribute="leadingMargin" constant="12" id="21c-XP-Tfp"/>
+                                                <constraint firstItem="LsP-QO-cvR" firstAttribute="centerY" secondItem="Vvv-uK-Rfq" secondAttribute="centerY" constant="-10" id="FE9-4f-Ctz"/>
+                                                <constraint firstItem="LsP-QO-cvR" firstAttribute="leading" secondItem="Ujr-SE-ev0" secondAttribute="leadingMargin" constant="12" id="N9i-HP-KiO"/>
+                                                <constraint firstItem="Cwj-Pq-vxT" firstAttribute="centerY" secondItem="Vvv-uK-Rfq" secondAttribute="centerY" constant="10" id="O5Y-fy-wvd"/>
+                                                <constraint firstItem="Vvv-uK-Rfq" firstAttribute="leading" secondItem="Cwj-Pq-vxT" secondAttribute="trailing" constant="16" id="U7t-4Y-1Rf"/>
+                                                <constraint firstItem="Vvv-uK-Rfq" firstAttribute="centerY" secondItem="Ujr-SE-ev0" secondAttribute="centerY" id="ah3-PY-LwZ"/>
+                                                <constraint firstItem="Vvv-uK-Rfq" firstAttribute="leading" secondItem="LsP-QO-cvR" secondAttribute="trailing" constant="16" id="jdY-d0-Yuw"/>
+                                                <constraint firstAttribute="trailing" secondItem="Vvv-uK-Rfq" secondAttribute="trailing" constant="12" id="uGT-Ut-B1M"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="LsP-QO-cvR" id="BdY-hC-Ubm"/>
+                                            <outlet property="phoneLabel" destination="Cwj-Pq-vxT" id="EoV-2Y-kRs"/>
+                                            <outlet property="voipAppLabel" destination="Vvv-uK-Rfq" id="jw8-dz-WXN"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -146,7 +184,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IfQ-zD-sgW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1839" y="47"/>
+            <point key="canvasLocation" x="1837.68115942029" y="46.875"/>
         </scene>
         <!--Contact Detail View Controller-->
         <scene sceneID="yRP-4h-MrG">
